--- a/unit_4/css/style.css
+++ b/unit_4/css/style.css
@@ -1,3 +1,4 @@
+* { margin:0; padding:0; box-sizing:border-box; }
 body {
 	background-color: #fff;
   	color: #fff;
@@ -6,7 +7,6 @@ body {
 }
 
 header {
-	height: 2rem;
 	background: white;
 }
 
