--- a/unit_5/css/style.css
+++ b/unit_5/css/style.css
@@ -11,12 +11,8 @@ body {
 	font-family: Georgia;
 	font-size: 1.2rem;
 	color: #545454;
-	line-height: 34px;
-	letter-spacing: 0.34px;
-	/*margin-left: 6rem;*/
-	/*margin-right: 40rem;*/
-	/*margin-top: 4rem;
-	margin-bottom: 4rem;*/
+	line-height: 2rem;
+	letter-spacing: 0.05rem;
 	padding-left: 6rem;
 	padding-right: 0rem;
 	padding-top: 8rem;
@@ -47,13 +43,8 @@ body {
 	font-family: Georgia;
 	font-size: 1.2rem;
 	color: #545454;
-	line-height: 34px;
-	letter-spacing: 0.34px;
-	/*padding-left: 0rem;
-	padding-right: 6rem;
-	padding-top: 8rem;
-	padding-bottom: 8rem;
-	padding: 1rem;*/
+	line-height: 2rem;
+	letter-spacing: 0.05rem;
 	font-weight: 300;
 	width:45rem;
 	float: right;
@@ -63,13 +54,13 @@ body {
 }
 
 #expertise-hero h2{
-
 	font-family: Lato;
 	font-weight: 600;
 	font-size: 3rem;
 	color: #FDAC2A;
 	padding-left: 6rem;
 	padding-top:2rem;
+
 }
 
 #expertise-hero ul{
@@ -79,31 +70,33 @@ body {
 	color: #FFFFFF;
 	padding-left: 8rem;
 	padding-top: 3rem;
+
 }
+
 #expertise-hero li{
 	padding: 0.5rem;
+
 }
 
 #expertise-hero h3{
 	display: inline-block;
 	font-family: Georgia;
 	font-size: 1.5rem;
-	letter-spacing: 0.34px;
-	line-height: 26px;
-	/*margin-left: 6rem;
-	margin-right: 30rem;*/
+	letter-spacing: 0.05rem;
+	line-height: 2rem;
 	margin-top: 4rem;
 	padding: 1.5rem;
 	font-weight:300;
 	background-color: rgba(253,172,42,0.85);
 	width:20rem;
 	text-align: center;
+
 }
+
 #expertise-hero h3 span{
 	font-size: 3rem;
 	text-align: center;
-	/*margin: 5rem;
-*/
+
 }
 
 #contact-hero h3{
@@ -158,22 +151,23 @@ body {
 	float:right;
 	padding-right: 3rem
 	display:inline;
+
 }
 
 #main-heading {
 	font-family: Lato-Regular;
-	font-size: 60px;
+	font-size: 4rem;
 	color: #FFFFFF;
-	line-height: 62px;
+	line-height: 4rem;
 	padding-left: 6rem;
-	padding-top: 12rem;
+	padding-top: 14rem;
 }
 
 #text-orange {
 	font-family: Georgia;
 	font-size: 1.5rem;
-	letter-spacing: 0.34px;
-	line-height: 26px;
+	letter-spacing: 0.05rem;
+	line-height: 2rem;
 	margin-left: 6rem;
 	margin-right: 30rem;
 	margin-top: 4rem;
@@ -183,22 +177,14 @@ body {
 	
 }
 
-
-
 h2 span {
 	background-color: rgba(253,172,42,0.79);
+
 }
 
 h1 span{
 	color: #FDAC2A;
-}
 
-.container p {
-	font-size: 1.5rem;
-    line-height: 42px;
-    font-family:'Helvetica Neue',Helvetica,Arial,'Lucida Grande',sans-serif;
-    font-weight:300;
-	
 }
 
 #logo img {
@@ -232,18 +218,6 @@ h1 span{
 
 }
 
-/*.about h3{
-	padding:4rem;
-	color:#404f59;
-	width: auto;
-    margin-right: auto;
-    margin-left: auto;
-    padding-left: 40px;
-    padding-right: 40px;
-    position: relative;
-    font-weight:300;
-
-}*/
 .herotwo {
 	background: url(../images/hero2.jpg) no-repeat center center;
 	background-size: cover;
