--- a/unit_5/css/style.css
+++ b/unit_5/css/style.css
@@ -3,32 +3,32 @@
 body {
 	background-color: #fff;
   	color: #fff;
-  	font-family: Helvetica;
+  	font-family: Helvetica, arial, sans-serif;
+  	font-size:100%;
   	margin: 0;
 }
-
+.about {
+	position:relative;
+}
 .about h3{
-	font-family: Georgia;
+	font-family: Georgia, times, serif;
 	font-size: 1.2rem;
 	color: #545454;
-	line-height: 2rem;
+	line-height: 2em;
 	letter-spacing: 0.05rem;
-	padding-left: 6rem;
-	padding-right: 0rem;
-	padding-top: 8rem;
-	padding-bottom: 8rem;
 	font-weight: 300;
 	width:45rem;
 	display: inline-block;
+	position:absolute;
+	top:50%;
+	transform:translateY(-50%);
 
 }
 
 .about img{
-	display: inline-block;
+	display: block;
 	width: 30rem;
 	float:right;
-	padding:1rem;
-
 }
 
 .abouttwo img{
@@ -82,13 +82,14 @@ body {
 	display: inline-block;
 	font-family: Georgia;
 	font-size: 1.5rem;
+	float:left;
 	letter-spacing: 0.05rem;
 	line-height: 2rem;
-	margin-top: 4rem;
+	margin:.25%;
 	padding: 1.5rem;
 	font-weight:300;
 	background-color: rgba(253,172,42,0.85);
-	width:20rem;
+	width:24.5%;
 	text-align: center;
 
 }
