--- a/unit_5/css/style.css
+++ b/unit_5/css/style.css
@@ -40,7 +40,7 @@ h1 span{
 
 .about img{
 	display: block;
-	width: 30rem;
+	width: 30%;
 	float:right;
 	padding:5em;
 }
@@ -83,27 +83,27 @@ h1 span{
 #expertise-hero ul{
 	font-family: Lato;
 	font-weight: 450;
-	font-size: 1.5rem;
+	font-size: 1.5em;
 	color: #FFFFFF;
-	padding-left: 8rem;
-	padding-top: 3rem;
+	padding-left: 6em;
+	padding-top: 2em;
 
 }
 
 #expertise-hero li{
-	padding: 0.5rem;
+	padding: 0.5em;
 
 }
 
 #expertise-hero h3{
 	display: inline-block;
 	font-family: Georgia;
-	font-size: 1.5rem;
+	font-size: 1.5em;
 	float:left;
-	letter-spacing: 0.05rem;
-	line-height: 2rem;
-	margin: 8% 0.25% 0% 0.25%;
-	padding: 1.5rem;
+	letter-spacing: 0.05em;
+	line-height: 1.5em;
+	margin: 6% 0.25% 0% 0.25%;
+	padding: 1.2em;
 	font-weight:300;
 	background-color: rgba(253,172,42,0.85);
 	width:24.5%;
@@ -119,7 +119,8 @@ h1 span{
 
 #contact-hero h3{
 	text-align: center;
-	padding-top: 6rem;
+	padding-top: 6em;
+	text-decoration: underline;
 
 }
 
@@ -128,9 +129,9 @@ h1 span{
 	text-decoration: none;
 	font-family: Lato;
 	font-weight: 600;
-	font-size: 4rem;
+	font-size: 4em;
 	color: #FFFFFF;
-	margin-top: 6rem;
+	margin-top: 6em;
 
 }
 
@@ -139,29 +140,29 @@ h1 span{
 	text-decoration: none;
 	font-family: Lato;
 	font-weight: 600;
-	font-size: 4rem;
+	font-size: 4em;
 	color: #FDAC2A;
-	margin-top: 6rem;
+	margin-top: 6em;
 
 }
 #navbar h2{
 	display: inline-block;
 	text-decoration: none;
 	font-family: Lato-Regular;
-	font-size: 1.3rem;
+	font-size: 1.3em;
 	color: #fff;
-	padding-right: 5rem;
+	padding-right: 5em;
 	font-weight: 300;
-	padding-top: 1.5rem;
+	padding-top: 1.5em;
 }
 #navbar h2:hover{
 	color: #FDAC2A;
 	display: inline-block;
 	font-family: Lato-Regular;
-	font-size: 1.3rem;
-	padding-right: 5rem;
+	font-size: 1.3em;
+	padding-right: 5em;
 	font-weight: 300;
-	padding-top: 1.5rem;
+	padding-top: 1.5em;
 
 }
 
@@ -232,7 +233,6 @@ h1 span{
 	width:100%;
 	background-size: cover;
 	height: 60vh;
-	text-decoration: underline;
 
 }
 
