--- a/unit_5/css/style.css
+++ b/unit_5/css/style.css
@@ -247,3 +247,16 @@ h1 span{
 	display:block;
 	height:0;
 }
+
+@media only screen and {max-width:1100px} {
+	.abouttwo img{
+	display: none;
+}
+	.abouttwo h3{
+	width:90%;
+	display: inline-block;
+	float: none;
+	
+
+}
+}
