--- a/unit_6/css/style.css
+++ b/unit_6/css/style.css
@@ -241,3 +241,37 @@ h1 span{
 	display:block;
 	height:0;
 }
+@media only screen and (max-width:1100px) {
+	.abouttwo {
+	background: #fff;
+}
+	.abouttwo h3{
+	width:100%;
+	display: inline-block;
+	float: none;
+	margin:0;
+}
+	.about {
+	background: #fff;
+}
+	.about h3{
+	width:100%;
+	display: inline-block;
+	float: none;
+	margin:0;
+}
+	#expertise-hero h3 {
+	    width: 49%;
+	    margin: 0.5% 0.25% 0% 0.25%;
+
+}	
+}
+
+@media only screen and (max-width:530px) {
+	#expertise-hero h3 {
+	    width: 100%;
+	    margin: 0.5% 0 0 0;
+
+}	
+
+}
